# winegpt

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  compose.prod.yml  compose.test.yml  compose.yml  justfile  mise.toml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_core_schema.sql  0002_auth_sessions.sql  0003_collection_wines.sql  0004_consumed_at_nullable.sql  0005_consumed_at_to_date.sql
backend/src/: auth.rs  collections.rs  db.rs  entries.rs  lib.rs  main.rs  test_support.rs  wines.rs
docs/: app-overview.md  docker.md  domain-model.md  engineering-standards.md  roadmap.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.mjs  rescript.json  vite.config.mjs
frontend/e2e/: auth.spec.js  entry.spec.js  i18n.spec.js  routing.spec.js
frontend/scripts/: smoke-test.mjs  smoke.test.js  wait-for-url.mjs
frontend/src/: ApiClient.bs.js  ApiClient.res  App.bs.js  App.res  AppShell.bs.js  AppShell.res  AuthApi.bs.js  AuthApi.res  AuthApp.jsx  AuthAppSupport.bs.js  AuthAppSupport.res  AuthCard.bs.js  AuthCard.res  AuthField.bs.js  AuthForm.bs.js  AuthForm.res  AuthSession.res  CollectionApi.bs.js  CollectionApi.res  CollectionList.bs.js  CollectionList.res  CollectionSelectionStorage.bs.js  CollectionState.bs.js  CollectionState.res  Main.bs.js  Main.res  SessionBootstrap.bs.js  SessionBootstrap.res  SessionStorage.bs.js  apiClient.js  authApi.js  collectionApi.js  index.css  (+2 more)
prompts/: fix-bug-tdd.md  implement-feature-tdd.md  refactor-no-behavior-change.md  review-duplication.md  review-test-gaps.md
(+73 files in other folders)
