[package]
name = "wine-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
